tooling/nargo_cli/tests/snapshots/execution_failure/vector_pop_back_oob/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: cannot pop from a vector with length 0
  ┌─ src/main.nr:9:23
  │
9 │         let (s2, x) = vector.pop_back();
  │                       ---------------
  │
  = Call stack:
    1. src/main.nr:9:23

Failed assertion
